--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,152 @@
-.container{
-  max-width: 80%;
-  padding: 10px;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+header{
   display: flex;
-  justify-content: center;
+  width: 80%;
+  margin: auto;
+  height: 6vh;
+  align-items: center;
+  box-shadow: 0 2px 3px -2px rgba(0,0,0,.2);
 }
 
-.mainBody{
-  flex: 1;
+.logo-container,.nav-links {
+  display: flex;
+}
+
+
+.logo-container{
+  flex:10;
+}
+
+/* Uncomment when there is a logo on the top left
+.logo{
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  position: relative;
+  top: 22px;
+  height: 55px;
+  margin: 5px;
+  font-weight: 700;
+}
+*/
+
+/*temperary */
+.logo{
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  position: relative;
+  height: 45px;
+  margin: 5px;
+  font-weight: 700;
+  font-size: 17px;
+}
+
+nav{
+  flex:1;
+}
+
+.nav-links{
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  font-weight: 700;
+  font-size: 17px;
+}
+
+.nav-link{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  color: black;
+  text-decoration: none;
+}
+
+.nav-link:hover,.nav-link:focus,.logo:hover,.logo:focus{
+  color: #650a0a;
+}
+
+.presentation{
+  display: flex;
+  width: 80%;
+  margin: auto;
+  min-height: 20vh;
+  align-items: center;
+  flex-direction: column-reverse;
+}
+
+.info{
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.location p{
   text-align: center;
+  font-size: 25px;
+  font-weight: 300;
 }
 
-.siumai{
-  width: 765px;
-  height: 600px;
-  /* Center vertically and horizontally */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  
+.cta{
+  padding: 30px 0px 20px 0px;
 }
 
-/* PLACEHOLDER */
-.logo-img{
-  /* Center vertically and horizontally */
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  
-}
-
-.location{
-  font-size: 20px;
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.menu{
-  position: absolute;
-  top: 85%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.navbar {
-  transition: all 0.4s;
-}
-
-.navbar .nav-link {
-  color:black;
-}
-
-.navbar .nav-link:hover,
-.navbar .nav-link:focus {
-  color: #650a0a;
-  text-decoration: none;
-}
-
-/* LOGO */
-.logo {
-  width: 110px;
-  height: 75px;
-  max-width: 100%;
-}
-.navbar .navbar-brand {
-  color: black;
-}
-
-
-/* Change navbar styling on scroll */
-.navbar.active {
-  background: #fff;
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.navbar.active .nav-link {
-  color: black;
-}
-
-.navbar.active .nav-link:hover,
-.navbar.active .nav-link:focus {
-  color: #650a0a;
-  text-decoration: none;
-}
-
-.navbar.active .navbar-brand {
-  color: black;
-}
-
-
-/* Change navbar styling on small viewports */
-@media (max-width: 991.98px) {
-  .navbar {
-      background: #fff;
-  }
-
-  .navbar .navbar-brand, .navbar .nav-link {
-      color: black;
-  }
-}
-
-
-.button {
+.cta-menu {
+  border-radius: 8px;
   background-color: #650a0a;
   border: none;
   color: white;
-  padding: 15px;
+  padding: 12px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
+  cursor: pointer;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
 }
 
-.button3 {border-radius: 8px;}
+.cover img{
+  padding: 50px 0px 0px 0px;
+  width: 500px;
+}
 
-
-
-body {
-  font-family: 'Lato';
-
+@media screen and (max-width: 650px){
+  .logo{
+      font-size: 12px;
+  }
+  .nav-links{
+    font-size: 12px;
+  }
+  .presentation{
+      flex-direction: column-reverse;
+  }
+  .introduction{
+      margin-top: 5vh;
+      text-align: center;
+  }
+  .location p{
+      text-align: center;
+      font-size: 15px;
+      font-weight: 300;
+  }
+  .cover img{
+      width: 350px;
+  }
 
 }
+
+
+
