--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
-*{
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+* {
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
-header{
-  display: flex;
-  width: 80%;
-  margin: auto;
-  height: 6vh;
-  align-items: center;
-  box-shadow: 0 2px 3px -2px rgba(0,0,0,.2);
+header {
+	display: flex;
+	width: 80%;
+	margin: auto;
+	height: 6vh;
+	align-items: center;
+	box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.2);
 }
 
-.logo-container,.nav-links {
-  display: flex;
+.logo-container,
+.nav-links {
+	display: flex;
 }
 
-
-.logo-container{
-  flex:10;
+.logo-container {
+	flex: 10;
 }
 
 /* Uncomment when there is a logo on the top left
@@ -41,112 +41,111 @@ header{
 */
 
 /*temperary */
-.logo{
-  display: flex;
-  align-items: center;
-  color: black;
-  text-decoration: none;
-  position: relative;
-  height: 45px;
-  margin: 5px;
-  font-weight: 700;
-  font-size: 17px;
+.logo {
+	display: flex;
+	align-items: center;
+	color: black;
+	text-decoration: none;
+	position: relative;
+	height: 45px;
+	margin: 5px;
+	font-weight: 700;
+	font-size: 17px;
 }
 
-nav{
-  flex:1;
+nav {
+	flex: 1;
 }
 
-.nav-links{
-  align-items: center;
-  justify-content: space-around;
-  list-style: none;
-  font-weight: 700;
-  font-size: 17px;
+.nav-links {
+	align-items: center;
+	justify-content: space-around;
+	list-style: none;
+	font-weight: 700;
+	font-size: 17px;
 }
 
-.nav-link{
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
-  color: black;
-  text-decoration: none;
+.nav-link {
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+	color: black;
+	text-decoration: none;
 }
 
-.nav-link:hover,.nav-link:focus,.logo:hover,.logo:focus{
-  color: #650a0a;
+.nav-link:hover,
+.nav-link:focus,
+.logo:hover,
+.logo:focus {
+	color: #650a0a;
 }
 
-.presentation{
-  display: flex;
-  width: 80%;
-  margin: auto;
-  min-height: 20vh;
-  align-items: center;
-  flex-direction: column-reverse;
+.presentation {
+	display: flex;
+	width: 80%;
+	margin: auto;
+	min-height: 20vh;
+	align-items: center;
+	flex-direction: column-reverse;
 }
 
-.info{
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
+.info {
+	display: flex;
+	flex-direction: column-reverse;
+	align-items: center;
 }
 
-.location p{
-  text-align: center;
-  font-size: 25px;
-  font-weight: 300;
+.location p {
+	text-align: center;
+	font-size: 25px;
+	font-weight: 400;
 }
 
-.cta{
-  padding: 30px 0px 20px 0px;
+.cta {
+	padding: 30px 0px 20px 0px;
 }
 
 .cta-menu {
-  border-radius: 8px;
-  background-color: #650a0a;
-  border: none;
-  color: white;
-  padding: 12px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  font-family: 'Lato', sans-serif;
-  font-weight: bold;
+	border-radius: 8px;
+	background-color: #650a0a;
+	border: none;
+	color: white;
+	padding: 12px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	font-family: 'Lato', sans-serif;
+	font-weight: bold;
 }
 
-.cover img{
-  padding: 50px 0px 0px 0px;
-  width: 500px;
+.cover img {
+	padding: 50px 0px 0px 0px;
+	width: 500px;
 }
 
-@media screen and (max-width: 650px){
-  .logo{
-      font-size: 12px;
-  }
-  .nav-links{
-    font-size: 12px;
-  }
-  .presentation{
-      flex-direction: column-reverse;
-  }
-  .introduction{
-      margin-top: 5vh;
-      text-align: center;
-  }
-  .location p{
-      text-align: center;
-      font-size: 15px;
-      font-weight: 300;
-  }
-  .cover img{
-      width: 350px;
-  }
-
+@media screen and (max-width: 650px) {
+	.logo {
+		font-size: 12px;
+	}
+	.nav-links {
+		font-size: 12px;
+	}
+	.presentation {
+		flex-direction: column-reverse;
+	}
+	.introduction {
+		margin-top: 5vh;
+		text-align: center;
+	}
+	.location p {
+		text-align: center;
+		font-size: 15px;
+		font-weight: 300;
+	}
+	.cover img {
+		width: 350px;
+	}
 }
-
-
-
